# MRPC

./: CMakeLists.txt  GEMINI.md  README.md  coroutine-plan.md
conf/: mrpc.xml  mrpc2.xml  mrpc3.xml
mrpc/: CMakeLists.txt
mrpc/include/common/: config.h  coroutine_task.h  timestamp.h
mrpc/include/event/: fd_event.h  io_thread.h  io_thread_pool.h  timer_queue.h
mrpc/include/net/tcp/: tcp_client.h  tcp_connection.h  tcp_connection_pool.h  tcp_server.h  tcp_vector_buffer.h
mrpc/include/rpc/: rpc_channel.h  rpc_client.h  rpc_server.h
mrpc/src/common/: config.cpp
mrpc/src/event/: io_thread.cpp  io_thread_pool.cpp
mrpc/src/net/protocol/http/: http_define.cpp
mrpc/src/net/tcp/: tcp_client.cpp  tcp_connection.cpp  tcp_connection_pool.cpp  tcp_vector_buffer.cpp
mrpc/src/rpc/: register_center.cpp  rpc_channel.cpp  rpc_client.cpp  rpc_server.cpp
testcases/: CMakeLists.txt  test_rpc_channel_calling_mode.cpp  test_rpc_channel_loop.cpp  test_rpc_channel_loop_unix.cpp  test_rpc_register_center_subscribe_publish.cpp  test_rpc_server.cpp  test_rpc_server2.cpp  test_rpc_server3.cpp  test_rpc_server_unix.cpp
